--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     </main>
 
 
-    <!------------------success-message-area--------------->>
+    <!------------------success-message-area--------------->
     <div id="success-message" class="container">
         <div class="message-area">
             <div>
